fix position hamb on ios

--- a/source/sass/blocks/hamb.scss
+++ b/source/sass/blocks/hamb.scss
@@ -62,7 +62,9 @@
 }
 
 .is-open .hamb {
-  margin-bottom: 0;
+  position: absolute;
+  right: 16px;
+  top: 26px;
 }
 
 .is-open .hamb__line {
